crates/parser/tests/snapshots/fixture_test__list_tuple.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - DefFn:
      name: make_list
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        App:
          name: List
          args:
            - Named:
                name: Int
                span:
                  - 37
                  - 40
          span:
            - 32
            - 41
      body:
        List:
          elements:
            - Lit:
                value:
                  Int: 1
                span:
                  - 45
                  - 46
            - Lit:
                value:
                  Int: 2
                span:
                  - 48
                  - 49
            - Lit:
                value:
                  Int: 3
                span:
                  - 51
                  - 52
          span:
            - 44
            - 53
      span:
        - 13
        - 53
  - DefFn:
      name: make_tuple
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Tuple:
          elements:
            - Named:
                name: Int
                span:
                  - 75
                  - 78
            - Named:
                name: String
                span:
                  - 80
                  - 86
          span:
            - 74
            - 87
      body:
        Tuple:
          elements:
            - Lit:
                value:
                  Int: 1
                span:
                  - 91
                  - 92
            - Lit:
                value:
                  String: hi
                span:
                  - 94
                  - 98
          span:
            - 90
            - 99
      span:
        - 54
        - 99
