crates/parser/tests/snapshots/fixture_test__prelude_match_option.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - DefFn:
      name: unwrap_or
      visibility: Private
      type_params: []
      params:
        - name: opt
          ty: ~
          span:
            - 73
            - 76
        - name: default
          ty: ~
          span:
            - 78
            - 85
      constraints: []
      return_type: ~
      body:
        Match:
          scrutinee:
            Var:
              name: opt
              span:
                - 95
                - 98
          arms:
            - pattern:
                Constructor:
                  name: Some
                  args:
                    - Var:
                        name: x
                        span:
                          - 110
                          - 111
                  span:
                    - 105
                    - 112
              guard: ~
              body:
                Var:
                  name: x
                  span:
                    - 116
                    - 117
              span:
                - 105
                - 117
            - pattern:
                Constructor:
                  name: None
                  args: []
                  span:
                    - 123
                    - 127
              guard: ~
              body:
                Var:
                  name: default
                  span:
                    - 131
                    - 138
              span:
                - 123
                - 138
          span:
            - 89
            - 141
      span:
        - 59
        - 141
  - DefFn:
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        App:
          func:
            Var:
              name: unwrap_or
              span:
                - 156
                - 165
          args:
            - App:
                func:
                  Var:
                    name: Some
                    span:
                      - 166
                      - 170
                args:
                  - Lit:
                      value:
                        Int: 42
                      span:
                        - 171
                        - 173
                span:
                  - 166
                  - 174
            - Lit:
                value:
                  Int: 0
                span:
                  - 176
                  - 177
          span:
            - 156
            - 178
      span:
        - 143
        - 178
