crates/parser/tests/snapshots/fixture_test__prelude_option.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - DefFn:
      name: main
      visibility: Private
      params: []
      constraints: []
      return_type: ~
      body:
        App:
          func:
            Var:
              name: Some
              span:
                - 77
                - 81
          args:
            - Lit:
                value:
                  Int: 42
                span:
                  - 82
                  - 84
          span:
            - 77
            - 85
      span:
        - 64
        - 85
