crates/parser/tests/snapshots/fixture_test__prelude_shadow.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - DefType:
      name: Option
      visibility: Private
      type_params:
        - a
      kind:
        Sum:
          variants:
            - name: MyVariant
              fields:
                - Var:
                    name: a
                    span:
                      - 87
                      - 88
              span:
                - 77
                - 89
            - name: MyNone
              fields: []
              span:
                - 92
                - 98
      deriving: []
      span:
        - 60
        - 98
  - DefFn:
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        App:
          func:
            Var:
              name: MyVariant
              span:
                - 113
                - 122
          args:
            - Lit:
                value:
                  Int: 42
                span:
                  - 123
                  - 125
          span:
            - 113
            - 126
      span:
        - 100
        - 126
