crates/parser/tests/snapshots/fixture_test__recur.snap
---
source: crates/parser/tests/fixture_test.rs
assertion_line: 28
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: factorial
      visibility: Private
      type_params: []
      params:
        - name: n
          ty:
            Named:
              name: Int
              span:
                - 30
                - 33
          span:
            - 27
            - 33
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 38
            - 41
      body:
        If:
          cond:
            BinaryOp:
              op: Le
              lhs:
                Var:
                  name: n
                  span:
                    - 47
                    - 48
              rhs:
                Lit:
                  value:
                    Int: 1
                  span:
                    - 52
                    - 53
              span:
                - 47
                - 53
          then_:
            Lit:
              value:
                Int: 1
              span:
                - 56
                - 57
          else_:
            BinaryOp:
              op: Mul
              lhs:
                Var:
                  name: n
                  span:
                    - 67
                    - 68
              rhs:
                Recur:
                  args:
                    - BinaryOp:
                        op: Sub
                        lhs:
                          Var:
                            name: n
                            span:
                              - 77
                              - 78
                        rhs:
                          Lit:
                            value:
                              Int: 1
                            span:
                              - 81
                              - 82
                        span:
                          - 77
                          - 82
                  span:
                    - 71
                    - 83
              span:
                - 67
                - 83
          span:
            - 44
            - 85
      span:
        - 13
        - 85
